# parle

./: .gitignore  README.md  README_VOICE_INPUT.md  parle-startup.vbs  pyproject.toml  start-voice-input.bat
.claude/: settings.local.json
parle/: cli.py  config.py  converter.py  hotkey_dialog.py  player.py  recorder.py  transcriber.py  tray.py
